<resources>
  <string name="app_name">NM Medical Cannabis</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_home"></string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_main2">NM Medical Cannabis Program</string>
  <string name="nm_patients">NM Patients</string>

  <string name="New_Mexico_MCP">New Mexico Medical Cannabis Program</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="patient_id_card">Patient Identification Card</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="pick_date">Pick Date</string>
  <string name="init_text">Date Picker Example</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="edit_message">Enter a message</string>
  <string name="button_send">Send</string>
  <string name="card_id_code">Card ID Code</string>
  <string name="issue_date">Issued Date</string>
  <string name="exp_date">Expiration Date</string>
  <string name="units_start_date">Units Start Date</string>
  <string name="units_renewal_date">Units Renewal Date</string>
  <string name="about">About</string>
  <string name="regulations_url">https://nmhealth.org/publication/view/regulation/126/</string>


</resources>
