<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/patient_id_card"
    android:textColor="@android:color/black"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="17dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="16dp"
    android:lineSpacingExtra="14sp"
    android:text="@string/card_id_code"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/editText2"
    app:layout_constraintTop_toTopOf="@+id/guideline"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"/>
  <EditText
    android:id="@+id/editText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="Name"
    android:textAlignment="center"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
    app:layout_constraintRight_toRightOf="@+id/editText3"/>
  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/issue_date"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView5"
    app:layout_constraintRight_toLeftOf="@+id/editText3"
    app:layout_constraintTop_toBottomOf="@+id/textView5"
    app:layout_constraintHorizontal_bias="0.0"
    android:layout_marginEnd="16dp"/>
  <EditText
    android:id="@+id/editText3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="Name"
    android:textAlignment="center"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
    tools:layout_editor_absoluteX="181dp"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline"
    android:orientation="horizontal"
    app:layout_constraintGuide_end="549dp"
    tools:layout_editor_absoluteY="54dp"
    tools:layout_editor_absoluteX="0dp"/>
  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/exp_date"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView6"
    app:layout_constraintTop_toBottomOf="@+id/textView6"/>
  <EditText
    android:id="@+id/editText4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="Name"
    android:textAlignment="center"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toRightOf="@+id/textView7"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"/>
  <TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/units_start_date"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView7"
    app:layout_constraintTop_toBottomOf="@+id/textView7"/>
  <EditText
    android:id="@+id/editText5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="Name"
    android:textAlignment="center"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toRightOf="@+id/textView8"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"/>
  <EditText
    android:id="@+id/editText6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="Name"
    android:textAlignment="center"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toRightOf="@+id/textView9"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginEnd="16dp"/>
  <TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/units_renewal_date"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView8"
    app:layout_constraintTop_toBottomOf="@+id/textView8"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline3"
    app:layout_constraintGuide_begin="274dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="274dp"
    tools:layout_editor_absoluteX="0dp"/>
  <ListView
    android:layout_width="0dp"
    android:layout_height="287dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline3"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"/>

</android.support.constraint.ConstraintLayout>
